17-created comments feature test, added forms and set up app.rb

--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -11,6 +11,9 @@
       <form action="/bookmarks/<%= bookmark.id %>/edit" method="get">
         <input type="submit" value="Edit"/>
       </form>
+      <form action="/bookmarks/<%= bookmark.id %>/comments/new" method="get">
+        <input type="submit" value="Add Comment"/>
+      </form>
     </li>
   <% end %>
 </ul>
