--- a/views/comments/new.erb
+++ b/views/comments/new.erb
@@ -1,4 +1,4 @@
-<form action="/bookmarks/<%= @bookmark.id %>/comments" method="post">
+<form action="/bookmarks/<%= @bookmark_id %>/comments" method="post">
   <input type="text" name="comment"/>
   <input type="submit" value="Submit">
 </form>
